--- a/index.html
+++ b/index.html
@@ -11192,6 +11192,45 @@
                     </div>
                 </div>
                 <!-- ________ PR_Lowell's card END ________  -->
+
+
+                <!-- ________ Dilip's card START ________  -->
+                <div class="card">
+                    <p class="name">Dilip K N</p>
+                    <p class="contact">
+                        <i class="fab fa-twitter"></i>
+                        <a href="https://twitter.com/Dilip96730313" target="_blank">@dilip_k_n</a>
+                    </p>
+                    <p class="about">
+                        I am Tech geek | Data science, AI, ML enthusiast
+                    </p>
+                    <div class="resources">
+                        <p>3 Useful Dev Resources</p>
+                        <ul>
+                            <li>
+                                <a href="https://www.freecodecamp.org/" target="_blank" title="This is a link to an awesome resource">
+                                    freecodecamp
+                                </a>
+                            </li>
+                            <li>
+                                <a
+                                    href="https://www.w3Schools.com/"
+                                    target="_blank"
+                                    title="This is another link to web development tool I use a lot"
+                                >
+                                    w3Schools
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://stackoverflow.com/" target="_blank" title="The third link to something useful for developers">
+                                    StackOverflow
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- ________ Dilip's card END ________  -->
+                
                 <!-- ^^^^ Paste YOUR CARD directly ^^ ABOVE ^^ this line ^^^^ -->
                 <!-- ^^^^ make sure there is one line of space between your card start and the card end above it ^^^^ -->
                 <!-- ^^^^ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ^^^^ -->
